margin left fixed for vote on iphone part 2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -234,7 +234,9 @@ div.container {
     margin-right: 61px;
   }
   .vote-count {
-    margin-left: 50px;
+    margin-left: 100px;
+    margin-top: 10px;
+    margin-bottom: -10px;
   }
 
 
